Added sets M21 (Core 2021) and X2M (Double Masters)

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -28,5 +28,6 @@
     <Folder Include="Pages\Util\" />
     <Folder Include="Pages\Errors\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\m21\" />
   </ItemGroup>
 </Project>
