Added POR (Portal) set

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -29,5 +29,6 @@
     <Folder Include="Pages\Errors\" />
     <Folder Include="Controllers\" />
     <Folder Include="wwwroot\m21\" />
+    <Folder Include="wwwroot\por\" />
   </ItemGroup>
 </Project>
