--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "keywords": [],
   "author": "Cam Marsollier",
-  "license" : "SEE LICENSE IN LICENSE.md",
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
+    "axios": "^1.3.5",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-status-monitor": "^1.3.4",
