--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "keywords": [],
   "author": "Cam Marsollier",
-  "license" : "SEE LICENSE IN LICENSE.md",
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
+    "axios": "^1.3.5",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "express": "^4.18.2",
