--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.5",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-status-monitor": "^1.3.4",
